@@ -1,3 +1,10 @@
+2022-08-25  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-intro.el (find-eepitch-intro): added the section "2.6.
+	`find-vtermprocess'".
+
+	* eepitch.el (eepitch-isympy): new function.
+
 2022-08-20  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-intro.el (find-video-links-intro): rewrote the section "5.1.
